# cpullvm-toolchain

./: CONTRIBUTING.md  README.md
.github/workflows/: automerge.yml  check_modified_files.yml  hexframe-PR.yml  hexframe-trial.yml  issue-release-workflow.yml  linux-premerge.yml  native-runtime-nightly.yml  nightly.yml  qcom-preflight-checks.yml  sync_from_upstream.yml  zephyr-twister-tests.yml
libc/docs/: CMakeLists.txt
libc/docs/headers/: index.rst
llvm/: CMakeLists.txt
llvm/docs/: LangRef.rst
llvm/include/llvm/IR/: Intrinsics.td
llvm/lib/Analysis/: UniformityAnalysis.cpp
llvm/lib/CodeGen/: ExpandVectorPredication.cpp
llvm/lib/CodeGen/SelectionDAG/: LegalizeIntegerTypes.cpp  LegalizeVectorOps.cpp  SelectionDAG.cpp  SelectionDAGBuilder.cpp
llvm/lib/IR/: Verifier.cpp
llvm/lib/Passes/: PassBuilder.cpp
llvm/test/Other/: new-pm-defaults.ll  new-pm-thinlto-postlink-defaults.ll  new-pm-thinlto-postlink-pgo-defaults.ll  new-pm-thinlto-postlink-samplepgo-defaults.ll
llvm/utils/: profcheck-xfail.txt
orc-rt/include/orc-rt/: Session.h
orc-rt/lib/executor/: Session.cpp
orc-rt/unittests/: SessionTest.cpp
qualcomm-software/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ReleaseNotes.md  musl-embedded.cfg  versions.json
qualcomm-software/ci/: .automerge_ignore  automerge.py  check_modified_files.py  cpullvm_modified_files
qualcomm-software/cmake/: THIRD-PARTY-LICENSES.txt.in  VERSION.txt.in  copy_target_libraries.py  fetch_eld.cmake  fetch_musl-embedded.cmake  fetch_musl.cmake  fetch_picolibc.cmake  generate_version_txt.cmake  get_canonical_riscv_march.cmake  patch_repo.py
qualcomm-software/docs/: building.md  developing.md  user.md
qualcomm-software/embedded-multilib/: CMakeLists.txt  multilib-generate.py  multilib.yaml.in
qualcomm-software/embedded-multilib/json/: multilib.json
qualcomm-software/embedded-multilib/json/variants/: aarch64a_pacret.json  aarch64a_pacret_bkey_bti_tlsie.json  aarch64a_pacret_bti.json  aarch64a_soft_nofp_pacret_bkey_bti.json  aarch64a_soft_nofp_pacret_bti.json  aarch64a_soft_nofp_tlsie.json  aarch64a_tlsie.json  armv7a_soft_neon.json  armv7a_soft_nofp.json  armv7m_hard_fpv5_d16_nopic.json  armv7m_soft_nofp.json  armv8_soft_neon.json  riscv32im_xqci_ilp32_nothreads_nopic.json  riscv32imac_ilp32.json  riscv32imac_ilp32_nopic.json  riscv32imac_ilp32_scs_nopic.json  riscv32imac_ilp32_scs_nothreads_nopic.json  riscv32imac_zba_zbb_ilp32.json  riscv32imac_zba_zbb_ilp32_nopic.json  riscv32imac_zcb_zcmp_ilp32_nopic.json  riscv32imac_zcb_zcmp_zba_zbb_ilp32_nopic.json  riscv32imafc_ilp32f.json  riscv32imafc_zba_zbb_ilp32f.json  riscv32imafc_zcb_zcmp_zba_zbb_ilp32f.json  riscv32imc_ilp32_nothreads_nopic.json  riscv32imc_ilp32_scs_nothreads_nopic.json  riscv32imc_zba_zbb_zbc_zbs_ilp32_nothreads_nopic.json  riscv64gc_lp64_nopic.json  riscv64gc_lp64_scs_nopic.json  riscv64gc_lp64d_nopic.json  riscv64gc_zba_zbb_lp64_nopic.json  riscv64gc_zba_zbb_lp64d_nopic.json  riscv64imac_lp64_nopic.json  riscv64imac_lp64_scs_nopic.json  riscv64imc_lp64_nothreads_nopic.json  riscv64imc_lp64_scs_nothreads_nopic.json
qualcomm-software/embedded-runtimes/: CMakeLists.txt  empty-multilib.yaml  meson-cross-build.txt.in
qualcomm-software/embedded-runtimes/test-support/: gen-picolibc-lit-tests.py  lit-exec-qemu.py  llvm-libc++-picolibc.cfg.in  llvm-libc++abi-picolibc.cfg.in  llvm-libunwind-picolibc.cfg.in  modify-compiler-rt-xml.py  picolibc-test-wrapper.py  run_qemu.py  xfails.py
qualcomm-software/patches/llvm-project/: 0001-Define-_LIBCPP_HAS_C8RTOMB_MBRTOC8.patch  0005-AArch64-Make-width-of-stack-protector-guard-value-lo.patch  0006-cpullvm-bump-version-220101.patch
qualcomm-software/patches/musl/: 0001-riscv-fix-setjmp-assembly-when-compiling-for-ilp32f-.patch
qualcomm-software/patches/picolibc/: 0001-Enable-libcxx-builds.patch  0003-Add-support-for-strict-align-no-unaligned-access-in-.patch
qualcomm-software/scripts/: build.ps1  build.sh  build_copy_runtimes.ps1  build_copy_runtimes.sh  build_linux_runtimes.sh  build_musl-embedded_overlay.sh  build_no_qemu.sh  build_windows_runtimes.ps1  init_win_env.ps1  install_dependencies.ps1  install_dependencies.sh  run_hexframe_precheckin.sh  test.ps1  test.sh
qualcomm-software/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
qualcomm-software/test/multilib/: aarch64.test  armv7.test  armv7m.test  armv8.test  riscv32.test  riscv64.test  sysroot.test
